fix/adjsut and replace leadership images

--- a/leadership/index.html
+++ b/leadership/index.html
@@ -9,6 +9,16 @@
         <!--        <link rel="stylesheet" href="https://use.typekit.net/wvt4umv.css">-->
         <link rel="stylesheet" href="https://use.typekit.net/uff1hva.css">
         <link href="/dist/top.css" rel="stylesheet" type="text/css" />
+        <style>
+            .portrait-img {
+                width: inherit;
+                transform: unset;
+            }
+            .portrait {
+                height: 250px;
+                width: 250px;
+            }
+        </style>
 <!--        <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">-->
 
 
@@ -125,7 +135,7 @@
     <div class="col-xs-24 col-md-12">
         <div class="p-6">
             <div class="portrait mb-2">
-                <img src="/images/founders/AdesinaAdemola.jpg" class="portrait-img"/>
+                <img src="/images/founders/Adesina-Ademola.jpg" alt="rensource energy - founder" class="portrait-img"/>
             </div>
             <h1 class="t-24 mb-2">Ademola Adesina</h1>
             <p>Founder & CEO</p>
@@ -142,7 +152,7 @@
     </div><div class="col-xs-24 col-md-12">
         <div class="p-6">
             <div class="portrait mb-2">
-            <img src="/images/founders/ED.png" class="portrait-img"/>
+            <img src="/images/founders/Jussi-Savukoski.jpg" alt="rensource energy - Co-Founder & Executive Director" class="portrait-img"/>
             </div>
             <h1 class="t-24 mb-2">Jussi Savukoski</h1>
             <p>Co-Founder & Executive Director</p>
@@ -173,7 +183,7 @@
     <div class="col-xs-24 col-md-8">
         <div class="p-6">
             <div class="portrait mb-2">
-            <img src="/images/senior_management/coo.jpg" class="portrait-img"/>
+            <img src="/images/senior_management/anu-adasolum.jpg" alt="rensource energy - coo" class="portrait-img"/>
             </div>
             <h1 class="t-24 mb-2">Anu Adasolum</h1>
             <p>Chief Operating Officer</p>
@@ -190,7 +200,7 @@
     </div><div class="col-xs-24 col-md-8">
         <div class="p-6">
             <div class="portrait mb-2">
-            <img src="/images/senior_management/director1.jpg" class="portrait-img"/>
+            <img src="/images/senior_management/Kolawole-Akinboye.jpg" alt="rensource energy - director, projects" class="portrait-img"/>
             </div>
             <h1 class="t-24 mb-2">Kolawole Akinboye</h1>
             <p>Director, Projects</p>
@@ -226,7 +236,7 @@
     <div class="col-xs-24 col-md-8">
         <div class="p-6">
             <div class="portrait mb-2">
-            <img src="/images/senior_management/VP_finance.png" class="portrait-img"/>
+            <img src="/images/senior_management/oyewole-toriola.jpg" alt="rensource energy - Vp FInance" class="portrait-img"/>
             </div>
             <h1 class="t-24 mb-2">Oyewole Toriola</h1>
             <p>VP, Finance</p>
@@ -244,7 +254,7 @@
     <div class="col-xs-24 col-md-8">
         <div class="p-6">
             <div class="portrait mb-2">
-                <img src="/images/senior_management/Head_supply_chain.jpg" class="portrait-img"/>
+                <img src="/images/senior_management/Sade-Fagbola.jpg" alt="rensource energy - Head, Commercial Operations and Supply Chain" class="portrait-img"/>
             </div>
             <h1 class="t-24 mb-2">Sade Fagbola</h1>
             <p>Head, Commercial Operations and Supply Chain</p>
@@ -261,7 +271,7 @@
     </div><div class="col-xs-24 col-md-8">
         <div class="p-6">
             <div class="portrait mb-2">
-            <img src="/images/senior_management/Senior_technical_manager.jpg" class="portrait-img"/>
+            <img src="/images/senior_management/Hendrik-Luhl.jpg" alt="rensource energy - Senior Technical Manager" class="portrait-img"/>
             </div>
             <h1 class="t-24 mb-2">Hendrik Lühl</h1>
             <p>Senior Technical Manager</p>
@@ -288,7 +298,7 @@
     <div class="col-xs-24 col-md-8">
         <div class="p-6">
             <div class="portrait mb-2">
-            <img src="/images/board/christopher_foy.jpg" class="portrait-img">
+            <img src="/images/board/christopher-foy.jpg" alt="rensource energy - Board Member" class="portrait-img">
             </div>
             <h1 class="t-24 mb-2">Christopher Foy</h1>
             <p style="display: inline-block;">
@@ -304,7 +314,7 @@
     </div><div class="col-xs-24 col-md-8">
         <div class="p-6">
             <div class="portrait mb-2">
-            <img src="/images/board/david_ladipo.jpg" class="portrait-img"/>
+            <img src="/images/board/david-ladipo.jpg" alt="rensource energy - Board Member"  class="portrait-img"/>
             </div>
             <h1 class="t-24 mb-2">David Ladipo</h1>
             <p style="display: inline-block;">
@@ -320,7 +330,7 @@
     </div><div class="col-xs-24 col-md-8">
         <div class="p-6">
             <div class="portrait mb-2">
-                <img src="/images/board/sasha_israni.jpg" class="portrait-img"/>
+                <img src="/images/board/sasha-israni.jpg" alt="rensource energy - Board Member"  class="portrait-img"/>
             </div>
             <h1 class="t-24 mb-2">Sasha Israni</h1>
             <p style="display: inline-block;">
@@ -336,7 +346,7 @@
     </div><div class="col-xs-24 col-md-8">
         <div class="p-6">
             <div class="portrait mb-2">
-            <img src="/images/board/pardon_makumbe.jpg" class="portrait-img"/>
+            <img src="/images/board/pardon-makumbe.jpg" alt="rensource energy - Board Member"  class="portrait-img"/>
             </div>
             <h1 class="t-24 mb-2">Pardon Makumbe</h1>
             <p style="display: inline-block;">
