--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
         <link rel="stylesheet" href="https://use.typekit.net/uff1hva.css">
         <link href="/dist/top.css" rel="stylesheet" type="text/css" />
 <!--        <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">-->
-
-
-                                    </head>
+    </head>
     <body class="bg-yellow-100">
             <header>
-    <nav class="bg-white p-2 hide-xs">
-        <div class="container clearfix">
+    <nav class="bg-white">
+        <div class="container clearfix" style="display: none">
             <div class="float-right">
                 <p class="cosil" style="display: inline-block;margin: 0">
                     <a href="https://web.facebook.com/rensource" class="p-2" target="_blank">
@@ -99,31 +97,44 @@
 
     </nav>
 </header>
-            <section class="sub-header">
+    <section class="sub-header" style="background: #fff!important;">
+<!--    <div class="container-fluid">-->
     <div class="container">
         <div class="row">
-            <div class="col-xs-24 col-lg-12 d-flex p-4" style="flex-direction: column;justify-content: center">
+
+            <div class="col-xs-24 col-lg-12 d-flex p-4" style="flex-direction: column;justify-content: center;
+            /*position: absolute;*/
+left: -3.72%;
+right: 45.81%;
+top: -0.42%;
+bottom: 88.86%;
+/*background: url('images/Rectangle.svg');*/
+mix-blend-mode: normal;
+ background-size: cover;
+ background-position: bottom;
+"
+            >
                 <h2 class="text-color-gray-dark" style="font-weight: 700">Rensource develops
                     and manages <span class="text-color-yellow">renewable power</span> infrastructure in Nigeria.</h2>
                 <p class="carou-p">Revolutionizing energy provision in Africa by developing and operating clean energy based decentralized grids starting in Nigeria</p>
 
                 <div class="d-flex" style="flex-wrap: wrap">
-                    <a href="javascript;" class="btn btn-gray-dark mr-2 mb-3" id="howItWorks" data-target="tech-driven-section">
-                        <svg width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="javascript;" class="btn btn-gray-dark mr-2 mb-3" id="howItWorks" data-target="tech-driven-section" style="background: #000;">
+                        <svg width="22" height="22" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M17.2537 13.4715L11.315 9.2829C11.0971 9.12961 10.8078 9.10653 10.5689 9.22564C10.3281 9.34384 10.1777 9.58393 10.1777 9.8434V18.2178C10.1777 18.48 10.3281 18.7192 10.5689 18.8374C10.6707 18.8872 10.7821 18.9122 10.8944 18.9122C11.0409 18.9122 11.1894 18.8669 11.315 18.7774L17.2537 14.5925C17.4412 14.4586 17.5506 14.2517 17.5506 14.032C17.5516 13.8085 17.4393 13.6026 17.2537 13.4715Z" fill="#F1BF40"/>
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M0.347656 13.423C0.347656 6.34426 6.12334 0.60791 13.2506 0.60791C20.3762 0.60791 26.1536 6.34426 26.1527 13.423C26.1527 20.4984 20.3762 26.2338 13.2506 26.2338C6.12334 26.2338 0.347656 20.4992 0.347656 13.423ZM2.50244 13.4221C2.50244 19.3179 7.31465 24.0948 13.2501 24.0948C19.1846 24.0948 23.9968 19.3179 23.9959 13.4221C23.9959 7.52793 19.1846 2.74592 13.2501 2.74592C7.31465 2.74592 2.50244 7.52878 2.50244 13.4221Z" fill="#F1BF40"/>
                         </svg>
+                        <span style="font-size: 0.75rem; letter-spacing: 1px; color: #fbc336">How it works</span>
 
-                        How it works
+
                     </a>
-                    <a href="javascript;" class="btn btn-light mb-3" id="services" data-target="what-we-do-section">
-                        <svg width="27" height="26" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="javascript;" class="btn btn-light mb-3" id="services" data-target="what-we-do-section" style="background: #fbc336;">
+                        <svg width="22" height="22" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M12.8736 8.17531C12.9111 8.24871 12.9486 8.32211 12.9862 8.37716C13.0237 8.43221 13.08 8.48726 13.1175 8.54232C13.1738 8.59737 13.23 8.65242 13.3051 8.70747C13.3614 8.74417 13.4364 8.79922 13.5302 8.81757C13.6052 8.85427 13.6803 8.87262 13.7741 8.89097C13.8679 8.90932 13.9429 8.90932 14.018 8.90932C14.093 8.90932 14.1868 8.90932 14.2619 8.89097C14.3369 8.87262 14.4119 8.85427 14.4682 8.81757H14.487C14.562 8.78087 14.6371 8.74417 14.7121 8.68912C14.7684 8.65242 14.8247 8.59737 14.881 8.54232L14.8997 8.52397C14.956 8.46891 14.9935 8.41386 15.031 8.35881C15.0686 8.30376 15.1061 8.24871 15.1248 8.17531C15.1248 8.15696 15.1248 8.15696 15.1436 8.13861C15.1811 8.06521 15.1999 7.97346 15.2187 7.90006C15.2374 7.82666 15.2374 7.73491 15.2374 7.66151C15.2374 7.58811 15.2374 7.49636 15.2187 7.42296C15.1999 7.34956 15.1811 7.27616 15.1436 7.18441C15.0873 7.05595 15.0123 6.94585 14.9185 6.8541C14.8997 6.83575 14.8997 6.83575 14.881 6.8174C14.8247 6.76235 14.7684 6.72565 14.6934 6.6706C14.6183 6.6339 14.562 6.5972 14.487 6.5605C14.4119 6.5238 14.3369 6.50545 14.2619 6.4871C14.1681 6.46875 14.093 6.46875 14.018 6.46875C13.9429 6.46875 13.8491 6.46875 13.7741 6.4871C13.699 6.50545 13.624 6.5238 13.549 6.5605H13.5302C13.4552 6.5972 13.3801 6.6339 13.3238 6.6706C13.2488 6.72565 13.1925 6.76235 13.1362 6.8174C13.08 6.87245 13.0237 6.9275 12.9862 6.98255C12.9486 7.0376 12.9111 7.111 12.8736 7.18441C12.8361 7.25781 12.8173 7.33121 12.7985 7.40461C12.7798 7.49636 12.7798 7.56976 12.7798 7.64316C12.7798 7.71656 12.7798 7.80831 12.7985 7.88171C12.8173 8.02851 12.8548 8.10191 12.8736 8.17531Z" fill="#626262"/>
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M15.8457 17.4736H15.2969V11.9372C15.2969 11.6208 15.0344 11.3496 14.6765 11.3496H12.1712C11.8371 11.3496 11.5508 11.5982 11.5508 11.9372V13.1574C11.5508 13.4738 11.8132 13.745 12.1712 13.745H12.6722V17.4962H12.1712C11.8371 17.4962 11.5508 17.7448 11.5508 18.0838V19.304C11.5508 19.6204 11.8132 19.8916 12.1712 19.8916H15.8457C16.1797 19.8916 16.466 19.643 16.466 19.304V18.0838C16.466 17.7448 16.1797 17.4736 15.8457 17.4736Z" fill="#626262"/>
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M0.491699 13.1801C0.491699 6.10608 6.27072 0.367188 13.3942 0.367188C20.5178 0.367188 26.2968 6.10608 26.2968 13.1801C26.2968 20.2542 20.5178 25.9931 13.3942 25.9931C6.27072 25.9931 0.491699 20.2542 0.491699 13.1801ZM2.18994 13.1797C2.18994 19.3168 7.21415 24.3062 13.3942 24.3062C19.5742 24.3062 24.5984 19.3168 24.5984 13.1797C24.5984 7.04261 19.5742 2.05328 13.3942 2.05328C7.21415 2.05328 2.18994 7.04261 2.18994 13.1797Z" fill="#626262"/>
                         </svg>
-
-                        Services
+                        <span style="font-size: 0.75rem; letter-spacing: 1px;">How we do it</span>
                     </a>
                 </div>
 
@@ -683,8 +694,7 @@
             </div>
         </div>
 </footer>
-                
-                                <script src="/dist/vendor.js"></script>
+            <script src="/dist/vendor.js"></script>
         <script src="/dist/top.js"></script>
     </body>
 </html>
