changed colors for website

--- a/about/index.html
+++ b/about/index.html
@@ -11,32 +11,10 @@
         <link href="/dist/top.css" rel="stylesheet" type="text/css" />
 <!--        <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">-->
 
-
-                                    </head>
+</head>
     <body class="bg-yellow-100">
             <header>
-    <nav class="bg-white p-2 hide-xs">
-        <div class="container clearfix">
-            <div class="float-right">
-                <p class="cosil" style="display: inline-block;margin: 0">
-                    <a href="https://web.facebook.com/rensource" class="p-2" target="_blank">
-                        <span class="social facebook sm">Facebook</span>
-                    </a>
-                    <a href="https://twitter.com/rensourceenergy" class="p-2" target="_blank">
-                        <span class="social twitter sm">Twitter</span>
-                    </a>
-                    <a href="https://www.instagram.com/rensource" class="p-2" target="_blank">
-                        <span class="social instagram sm">Instagram</span>
-                    </a><a href="https://www.linkedin.com/company/rensource-energy/" class="p-2" target="_blank">
-                        <span class="social linkedin sm">LinkedIn</span>
-                    </a><a href="https://www.youtube.com/channel/UCJQkNRevEvx0LolNKXNZlew" class="p-2" target="_blank">
-                    <span class="social youtube sm">YouTube</span>
-                </a>
-                </p>
-            </div>
-        </div>
-
-    </nav>
+    
     <nav class="navbar navbar-expand-md navbar-light bg-yellow">
         <div class="container">
         <a class="pt-2 pb-2" href="/index.html">
@@ -102,7 +80,7 @@
             <h1 id="about-the-author-or-blog">About the Author or Blog</h1>
 
 <p>Here is a little information about the author or the blog.</p>
-            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
+           <footer  class="pt-6 t-14 leading-5  footer-style">
     <div class="container">
         <div class="row justify-content-between" style="padding: 10px 0; padding-bottom: 20px;">
             <div class="col-lg-8 text-center text-lg-left order-2 order-sm-1">
@@ -176,7 +154,7 @@
             </div>
         </div>
     </div>
-        <div class="copyright hide-xs" style="padding: 20px 0;background-color: #0c0c0c">
+        <div class="copyright hide-xs footer-bottom">
             <div class="container">
             ©2019 Rensource Limited. All Rights Reserved.
             </div>
