--- a/careers/index.html
+++ b/careers/index.html
@@ -141,7 +141,7 @@
             </div>
         </div>
     </section>            
-    <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
+   <footer  class="pt-6 t-14 leading-5  footer-style">
         <div class="container">
             <div class="row justify-content-between" style="padding: 10px 0; padding-bottom: 20px;">
                 <div class="col-lg-8 text-center text-lg-left order-2 order-sm-1">
@@ -215,7 +215,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="copyright hide-xs" style="padding: 20px 0;background-color: #0c0c0c">
+                <div class="copyright hide-xs footer-bottom">
                     <div class="container">
                         ©2019 Rensource Limited. All Rights Reserved.
                     </div>
