--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <link rel="stylesheet" href="https://use.typekit.net/uff1hva.css">
         <link href="/dist/top.css" rel="stylesheet" type="text/css" />
 <!--        <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">-->
-    </head>
+    
+</head>
     <body class="bg-yellow-100">
             <header>
     <nav class="bg-white">
@@ -205,18 +206,15 @@ mix-blend-mode: normal;
     </div>
 
 </section>
-<section class="products bg-white p-4 pt-8 pb-8 text-md-center text-left"
-         style="background-image: url(images/Nigeria.svg), url(images/Nigeria.svg);
-         background-repeat:  no-repeat, no-repeat;
-         background-size: 600px;
-         background-position: -350px center, 150% center;" id="tech-driven-section">
+<section class="products bg-white p-4 pt-8 pb-8 text-md-center text-left bg-wik-1"
+         style="background-color: #0A3652 !important" id="tech-driven-section">
     <div class="row ">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xs-24 col-sm-24 col-lg-16">
-                    <span style="">
-                        <h2 class="text-color-gray-dark t-36 mb-4" style="font-weight: 700">Leading technology-driven developer of <span class="text-color-yellow">renewable</span> energy</h2>
-                        <p class="">
+                    <span>
+                        <h2 class=" t-36 mb-4 yellow-text" style="font-weight: 700">Leading technology-driven developer of <span class="text-color-yellow">renewable</span> energy</h2>
+                        <p class="white-text">
                             Working with a variety of stakeholders including project sponsors, regulators and Government. Rensource takes ideas from conception to bankable opportunity.
                         </p>
                     </span>
@@ -232,7 +230,7 @@ mix-blend-mode: normal;
                             preload="auto"
                             poster="/videos/poster image for documentary.png"
                             data-setup='{}'
-                            style="box-shadow: 2px 2px 50px #ccc"
+                            style="box-shadow: 2px 2px 50px #0A3652"
                     >
                         <source src="https://s3.eu-central-1.amazonaws.com/rensource.energy/bloomberg.mp4" type="video/mp4"></source>
                         <p class="vjs-no-js">
@@ -614,7 +612,7 @@ mix-blend-mode: normal;
 </section>
 
 
-            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
+<footer  class="pt-6 t-14 leading-5  footer-style">
     <div class="container">
         <div class="row justify-content-between" style="padding: 10px 0; padding-bottom: 20px;">
             <div class="col-lg-8 text-center text-lg-left order-2 order-sm-1">
@@ -688,7 +686,7 @@ mix-blend-mode: normal;
             </div>
         </div>
     </div>
-        <div class="copyright hide-xs" style="padding: 20px 0;background-color: #0c0c0c">
+        <div class="copyright hide-xs footer-bottom">
             <div class="container">
             ©2019 Rensource Limited. All Rights Reserved.
             </div>
