--- a/leadership/index.html
+++ b/leadership/index.html
@@ -25,28 +25,7 @@
                                     </head>
     <body class="bg-yellow-100">
             <header>
-    <nav class="bg-white p-2 hide-xs">
-        <div class="container clearfix">
-            <div class="float-right">
-                <p class="cosil" style="display: inline-block;margin: 0">
-                    <a href="https://web.facebook.com/rensource" class="p-2" target="_blank">
-                        <span class="social facebook sm">Facebook</span>
-                    </a>
-                    <a href="https://twitter.com/rensourceenergy" class="p-2" target="_blank">
-                        <span class="social twitter sm">Twitter</span>
-                    </a>
-                    <a href="https://www.instagram.com/rensource" class="p-2" target="_blank">
-                        <span class="social instagram sm">Instagram</span>
-                    </a><a href="https://www.linkedin.com/company/rensource-energy/" class="p-2" target="_blank">
-                        <span class="social linkedin sm">LinkedIn</span>
-                    </a><a href="https://www.youtube.com/channel/UCJQkNRevEvx0LolNKXNZlew" class="p-2" target="_blank">
-                    <span class="social youtube sm">YouTube</span>
-                </a>
-                </p>
-            </div>
-        </div>
-
-    </nav>
+    
     <nav class="navbar navbar-expand-md navbar-light bg-yellow">
         <div class="container">
         <a class="pt-2 pb-2" href="/index.html">
@@ -124,7 +103,7 @@
     </div>
 </section>
 
-<section style="" class="pt-8 pb-8">
+<section class="pt-8 pb-8 bg-rensource-yellow">
     <div class="container">
         <div class="special-h">
             <span class="before"></span>
@@ -172,11 +151,11 @@
 <!--<div class="row">-->
 <!--    -->
 <!--</div>-->    </div>
-</section><section style="" class="pt-8 pb-8 bg-white">
+</section><section style="" class="pt-8 pb-8 bg-rensource-blue">
     <div class="container">
         <div class="special-h">
             <span class="before"></span>
-        <h2 class="special-h">Senior Management</h2>
+        <h2 class="special-h white-text">Senior Management</h2>
             <span class="after"></span>
         </div>
         <div class="row">
@@ -185,12 +164,12 @@
             <div class="portrait mb-2">
             <img src="/images/senior_management/anu-adasolum.jpg" alt="rensource energy - coo" class="portrait-img"/>
             </div>
-            <h1 class="t-24 mb-2">Anu Adasolum</h1>
-            <p>Chief Operating Officer</p>
+            <h1 class="t-24 mb-2 yellow-text">Anu Adasolum</h1>
+            <p class="white-text">Chief Operating Officer</p>
             <p style="display: inline-block;">
                 <span class="d-none">Social Media Handles</span>
                 <a href="#" target="_blank" class="p-1">
-                    <span class="social twitter circle">Twitter</span>
+                    <span class="social twitter circle bg-yellow">Twitter</span>
                 </a>
                 <a href="https://www.linkedin.com/in/anu-adasolum-46754a19/" target="_blank" class="p-1">
                     <span class="social linkedin circle">LinkedIn</span>
@@ -202,8 +181,8 @@
             <div class="portrait mb-2">
             <img src="/images/senior_management/Kolawole-Akinboye.jpg" alt="rensource energy - director, projects" class="portrait-img"/>
             </div>
-            <h1 class="t-24 mb-2">Kolawole Akinboye</h1>
-            <p>Director, Projects</p>
+            <h1 class="t-24 mb-2 yellow-text">Kolawole Akinboye</h1>
+            <p class="white-text">Director, Projects</p>
             <p style="display: inline-block;">
                 <span class="d-none">Social Media Handles</span>
                 <a href="#" target="_blank" class="p-1">
@@ -238,8 +217,8 @@
             <div class="portrait mb-2">
             <img src="/images/senior_management/oyewole-toriola.jpg" alt="rensource energy - Vp FInance" class="portrait-img"/>
             </div>
-            <h1 class="t-24 mb-2">Oyewole Toriola</h1>
-            <p>VP, Finance</p>
+            <h1 class="t-24 mb-2 yellow-text">Oyewole Toriola</h1>
+            <p class="white-text">VP, Finance</p>
             <p style="display: inline-block;">
                 <span class="d-none">Social Media Handles</span>
                 <a href="#" target="_blank" class="p-1">
@@ -256,8 +235,8 @@
             <div class="portrait mb-2">
                 <img src="/images/senior_management/Sade-Fagbola.jpg" alt="rensource energy - Head, Commercial Operations and Supply Chain" class="portrait-img"/>
             </div>
-            <h1 class="t-24 mb-2">Sade Fagbola</h1>
-            <p>Head, Commercial Operations and Supply Chain</p>
+            <h1 class="t-24 mb-2 yellow-text">Sade Fagbola</h1>
+            <p class="white-text">Head, Commercial Operations and Supply Chain</p>
             <p style="display: inline-block;">
                 <span class="d-none">Social Media Handles</span>
                 <a href="#" target="_blank" class="p-1">
@@ -273,8 +252,8 @@
             <div class="portrait mb-2">
             <img src="/images/senior_management/Hendrik-Luhl.jpg" alt="rensource energy - Senior Technical Manager" class="portrait-img"/>
             </div>
-            <h1 class="t-24 mb-2">Hendrik Lühl</h1>
-            <p>Senior Technical Manager</p>
+            <h1 class="t-24 mb-2 yellow-text">Hendrik Lühl</h1>
+            <p class="white-text">Senior Technical Manager</p>
             <p style="display: inline-block;">
                 <span class="d-none">Social Media Handles</span>
                 <a href="#" target="_blank" class="p-1">
@@ -287,7 +266,7 @@
         </div>
     </div>
 </div>    </div>
-</section></section><section style="" class="pt-8 pb-8">
+</section></section><section  class="pt-8 pb-8 bg-white">
     <div class="container">
         <div class="special-h">
             <span class="before"></span>
@@ -361,7 +340,7 @@
         </div>
     </div>
 </div>    </div>
-</section>            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
+</section>           <footer  class="pt-6 t-14 leading-5  footer-style">
     <div class="container">
         <div class="row justify-content-between" style="padding: 10px 0; padding-bottom: 20px;">
             <div class="col-lg-8 text-center text-lg-left order-2 order-sm-1">
@@ -435,7 +414,7 @@
             </div>
         </div>
     </div>
-        <div class="copyright hide-xs" style="padding: 20px 0;background-color: #0c0c0c">
+        <div class="copyright hide-xs footer-bottom">
             <div class="container">
             ©2019 Rensource Limited. All Rights Reserved.
             </div>
