--- a/manage_rss/index.html
+++ b/manage_rss/index.html
@@ -185,7 +185,7 @@
             </div>
         </div>
     </div>
-        <div class="copyright hide-xs" style="padding: 20px 0;background-color: #0c0c0c">
+        <div class="copyright hide-xs footer-bottom">
             <div class="container">
             ©2019 Rensource Limited. All Rights Reserved.
             </div>
