color change continuation

--- a/index.html
+++ b/index.html
@@ -247,14 +247,14 @@ mix-blend-mode: normal;
         </div>
     </div>
 </section>
-<section class="what-we-do p-4 pt-8 pb-8" id="what-we-do-section">
+<section class="what-we-do p-4 pt-8 pb-8" id="what-we-do-section"  style="background-color: #F1BF40 !important">
     <div class="row">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-xs-24 col-sm-24 col-md-11">
-                        <span style="">
+                        <span>
                         <h2 class="">What we do</h2>
-                        <span class="ruler"></span>
+                        <span class="ruler" style="background:#FFEC00"></span>
                     <div class="col-lg-24 col-sm-24 hide-xs">
                         <p class="">
                             Enjoy this short infographic clip of how we work at Rensource
@@ -268,7 +268,7 @@ mix-blend-mode: normal;
                                 preload="auto"
                                 poster="/videos/poster image for what we do.png"
                                 data-setup='{}'
-                                style="box-shadow: 2px 2px 50px #ccc"
+                                style="box-shadow: 2px 2px 0px #F1BF40;"
                         >
                             <source src="/videos/Rensource What we do.mp4" type="video/mp4"></source>
                             <p class="vjs-no-js">
@@ -591,19 +591,19 @@ mix-blend-mode: normal;
         <div class="row ">
             <div class="col-xs-24  col-lg-8">
                 <h5 class="mb-4 mt-6">From our News Desk</h5>
-                <div id="news" class="threadContainer">
+                <div id="news" class="threadContainer threadContainer-1">
                     <div id="rssfeeds"></div>
                 </div>
             </div>
             <div class="col-xs-24  col-lg-8">
                 <h5 class="mb-4 mt-6">Social</h5>
-                <div id="social" class="threadContainer">
+                <div id="social" class="threadContainer threadContainer-2">
                     <div id="socialListing"></div>
                 </div>
             </div>
             <div class="col-xs-24  col-lg-8">
                 <h5 class="mb-4 mt-6">Press Releases and News Articles</h5>
-                <div id="press" class="threadContainer">
+                <div id="press" class="threadContainer threadContainer-3">
                     <div id="listing"></div>
                 </div>
             </div>
