added curves amd redid pages

--- a/history/index.html
+++ b/history/index.html
@@ -17,7 +17,7 @@
     <link href="/dist/top.css" rel="stylesheet" type="text/css" />
     <!--        <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">-->
   </head>
-  <body class="bg-yellow-100">
+  <body class="">
     <header>
       <nav class="navbar navbar-expand-md navbar-light bg-yellow">
         <div class="container">
@@ -148,7 +148,7 @@
         </div>
       </nav>
     </header>
-    <section  class="pt-8 pb-8 bg-rensource-yellow">
+    <section  class="pt-8 pb-8 bg-rensource-yellow clip-me-9 height-85-vh ">
       <div class="container">
         <div class="row">
           <div class="col-xs-24 col-lg-12 p-4">
