--- a/leadership/index.html
+++ b/leadership/index.html
@@ -23,7 +23,7 @@
 
 
                                     </head>
-    <body class="bg-yellow-100">
+    <body class="">
             <header>
     
     <nav class="navbar navbar-expand-md navbar-light bg-yellow">
@@ -103,7 +103,7 @@
     </div>
 </section>
 
-<section class="pt-8 pb-8 bg-rensource-yellow">
+<section class="pt-8 pb-8 bg-rensource-yellow clip-me-2">
     <div class="container">
         <div class="special-h">
             <span class="before"></span>
@@ -151,7 +151,7 @@
 <!--<div class="row">-->
 <!--    -->
 <!--</div>-->    </div>
-</section><section style="" class="pt-8 pb-8 bg-rensource-blue">
+</section><section style="" class="pt-120 pb-8 bg-rensource-blue clip-me-1 mt-9-minus ">
     <div class="container">
         <div class="special-h">
             <span class="before"></span>
