--- a/mission/index.html
+++ b/mission/index.html
@@ -149,50 +149,73 @@
       </nav>
     </header>
     <section
-      style="text-align:center; background:url(/images/bulb-bg.png) no-repeat, white; background-position: left center"
+      style="background:url(/images/bulb-bg.png) no-repeat, white; background-position: right "
       class=""
     >
-          <div class="bg-rensource-yellow pt-8 pb-8">
+          <div class=" pt-8 pb-8">
                 <div class="container">
 
-        <h1 style="text-align: center">Mission, Vision and Core Values</h1>
+        <h1>Mission, Vision and Core Values</h1>
         <p>
-          We are synonymous with innovation, building excellence, and creating
+          We are synonymous with innovation, building <br> excellence, and creating
           role models for society.
         </p>
         </div>
     </div>
-    <div class="container">
-
-        <div class="row">
-          <div class="col-xs-24 col-md-12 p-4 p-lg-8 pb-2">
-            <img src="/images/goal.svg" />
-            <h4>Mission</h4>
-            <p>
-              To be the market leader in delivering technologically innovative
-              clean energy solutions in Nigeria and West Africa”
-            </p>
+    <div class="clip-me-6">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-24 col-md-10 p-4 p-lg-7 pb-2">
+                    <img src="/images/goal.svg" />
+                    <h4 >Mission</h4>
+    
+                </div>
+              <div class="col-xs-24 col-md-8 p-4 p-lg-8 pb-2">
+                <p>
+                  To be the market leader in delivering technologically innovative
+                  clean energy solutions in Nigeria and West Africa”
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="col-xs-24 col-md-12 p-4 p-lg-8 pb-2">
-            <img src="/images/globe.svg" />
-            <h4>Vision</h4>
+
+    </div>
+
+    <div class="clip-me-7">
+    <div class="container">
+        <div class="row">
+          <div class="col-xs-24 col-md-8 p-4 p-lg-8 pb-2">
             <p>
               To make Nigeria the first country in the world relying
               predominantly on distributed renewable-based power generation
             </p>
           </div>
+          <div class="col-xs-24 col-md-8 p-4 p-lg-10 pb-2">
+              <img src="/images/globe.svg" />
+              <h4 class="yellow-text">Vision</h4>
+          </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-xs-24 col-md-12 pt-0 p-4">
-            <img src="/images/values.svg" />
-            <h4>Core Values</h4>
+      </div>
+    </div>
+
+    <div class="clip-me-8">
+        <div class="container">
+            <div class="row">
+
+          <div class="col-xs-24 col-md-10 p-4 p-lg-7 pb-2">
+              <img src="/images/values.svg" />
+              <h4>Core Values</h4>
+            </div>
+          <div class="col-xs-24 col-md-8 pt-0 p-4">
             <p>
               Excellence Integrity + Transparency Dependability + Diligence
               Continuous learning Humility + Swagger Kindness Teamwork
             </p>
-          </div>
         </div>
       </div>
+    </div>
+  </div>
+
     </section>
     <footer class="pt-6 t-14 leading-5  footer-style">
       <div class="container">
