--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@ mix-blend-mode: normal;
         </div>
     </div>
 </section>
-<section class="what-we-do bg-rensource-yellow p-4 pt-8 pb-8 clip-me-2 mt-9-minus" id="what-we-do-section " >
-    <div class="row">
+<section class="what-we-do bg-rensource-yellow p-4  pb-8 clip-me-2  margin-query" id="what-we-do-section " >
+    <div class="row pt-8">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-xs-24 col-sm-24 col-md-11">
