--- a/leadership/index.html
+++ b/leadership/index.html
@@ -151,8 +151,10 @@
 <!--<div class="row">-->
 <!--    -->
 <!--</div>-->    </div>
-</section><section style="" class="pt-120 pb-8 bg-rensource-blue clip-me-1 mt-9-minus ">
+</section>
+<section style="" class="pt-120 pb-8 bg-rensource-blue clip-me-1 leader-margin">
     <div class="container">
+    <div class="row p-8"></div>
         <div class="special-h">
             <span class="before"></span>
         <h2 class="special-h white-text">Senior Management</h2>
