--- a/mission/index.html
+++ b/mission/index.html
@@ -163,7 +163,7 @@
         </div>
     </div>
     <div class="clip-me-6">
-        <div class="container">
+        <div class="container pb-6">
             <div class="row">
                 <div class="col-xs-24 col-md-10 p-4 p-lg-7 pb-2">
                     <img src="/images/goal.svg" />
@@ -182,7 +182,7 @@
     </div>
 
     <div class="clip-me-7">
-    <div class="container">
+    <div class="container p-2">
         <div class="row">
           <div class="col-xs-24 col-md-8 p-4 p-lg-8 pb-2">
             <p>
