--- a/contact/index.html
+++ b/contact/index.html
@@ -150,7 +150,7 @@
     </header>
     <div style="" class="pt-8 pb-2 bg-rensource-yellow">
       <div class="mb-6">
-        <h1 style="text-align: center">Contact</h1>
+        <h1  style="text-align: center">Contact</h1>
         <p class="text-center pl-6 pr-6">
           We are here to answer any questions you may have.
         </p>
@@ -191,7 +191,7 @@
           </div>
           <div class="col-xs-24 col-lg-12 bg-yellow">
             <form class="p-3 p-lg-8">
-              <h3>Contact</h3>
+              <h3 class="text-white">Contact</h3>
               <div class="form-group">
                 <div class="label d-none">Name</div>
                 <input
@@ -248,19 +248,17 @@
               style="background: url(/images/idea.svg) no-repeat;background-position: right 120px"
             >
               <form class="p-lg-6 p-3 text-center sub">
-                <h4 class="mb-3 mt-3">
+                <h4 class="mb-3 mt-3 text-white">
                   Subscribe to our newsletter to receive more information and
                   updates.
                 </h4>
-                <div class="form-group mb-3 mt-3">
-                  <label class="label d-none">Email</label>
+                <div class="form-group white-input mb-3 mt-3">
                   <input
                     type="text"
-                    class="form-control bg-transparent"
+                    class="test form-control bg-transparent"
                     name="email"
                     id="emailSub"
                     placeholder="Email"
-                    style="border-bottom: 1px solid #232323"
                   />
                 </div>
                 <button
