--- a/leadership/index.html
+++ b/leadership/index.html
@@ -103,7 +103,7 @@
     </div>
 </section>
 
-<section class="pt-8 pb-8 bg-rensource-yellow clip-me-2">
+<section class="pt-8 pb-8 bg-rensource-yellow clip-me-2 founder-margin">
     <div class="container">
         <div class="special-h">
             <span class="before"></span>
