--- a/contact/index.html
+++ b/contact/index.html
@@ -157,8 +157,8 @@
       </div>
       <section class="clip-me-11">
         <!--        <div class="container">-->
-        <div class=" row no-gutters ">
-          <div class="col-lg-12 p-4 p-lg-8 pr-6">
+        <div class=" row no-gutters  ">
+          <div class="col-lg-12 p-4 p-lg-8 pr-6 address-query">
             <h1
               class=""
               style=""
@@ -177,6 +177,7 @@
           <div class="col-lg-12">
             <div
               id="map"
+              class="d-none d-md-block"
               style="position: relative; overflow: hidden; margin-top: 10%; height: 70%; width: 85%"
             ></div>
           </div>
@@ -184,10 +185,10 @@
         </div>
       </section>
 
-      <section class="clip-me-12">
-        <div class=" row no-gutters">
+      <section class="clip-me-12 cliper-12-query">
+        <div class=" row no-gutters clip-12-query">
           <div class="col-xs-24 col-lg-12">
-            <img src="/images/worker.jpg" class="img-fluid" />
+            <img src="/images/office2.png" class="img-fluid" />
           </div>
           <div class="col-xs-24 col-lg-12">
             <form class="p-3 p-lg-8">
