--- a/index.html
+++ b/index.html
@@ -125,8 +125,13 @@ mix-blend-mode: normal;
                     <div class="special-container">
                         <h2 class="text-color-gray-dark" style="font-weight: 700">Rensource develops
                             and manages renewable power infrastructure in Nigeria.</h2>
-                        <p class="carou-p">Revolutionizing energy provision in Africa by developing and operating clean
-                            energy based decentralized grids starting in Nigeria</p>
+                        <p class="carou-p">
+                            Using the provision of solar-hybrid decentralized
+                            energy grids as an entry point, we provide tools and
+                            services to support the digitalization and
+                            corresponding productivity of small and medium
+                            size enterprises in West Africa
+                        </p>
 
                         <div class="d-flex" style="flex-wrap: wrap">
                             <a href="javascript;" class="btn btn-gray-dark mr-2 mb-3" id="howItWorks"
@@ -235,11 +240,17 @@ mix-blend-mode: normal;
             <div class="row justify-content-center">
                 <div class="col-xs-24 col-sm-24 col-lg-16">
                     <span>
-                        <h2 class=" t-36 mb-4 " style="font-weight: 700">Leading technology-driven developer of <span
-                                class="text-color-yellow">renewable</span> energy</h2>
+                        <h2 class=" t-36 mb-4 " style="font-weight: 700">
+                            Leading Nigeria towards a <span class="text-color-yellow">brighter</span> and
+                            <span class="text-color-yellow">
+                                smarter
+                            </span> future
+                            energy</h2>
                         <p class="">
-                            Working with a variety of stakeholders including project sponsors, regulators and
-                            Government. Rensource takes ideas from conception to bankable opportunity.
+                            Working with a diverse mix of stakeholders, an ecosystem that includes
+                            government, merchants, manufacturers, distributors, and the value chain
+                            linking them, Rensource is accelerating the transition from offline to
+                            online in the largest market in Africa.
                         </p>
                     </span>
                 </div>
@@ -257,8 +268,7 @@ mix-blend-mode: normal;
                             <video id="tech-driven" class="vid video-js" controls preload="auto"
                                 poster="/videos/poster image for documentary.png" data-setup='{}'
                                 style="box-shadow: 2px 2px 50px #0A3652">
-                                <source src="videos/A Rensource Impact Story.mp4"
-                                    type="video/mp4">
+                                <source src="videos/A Rensource Impact Story.mp4" type="video/mp4">
                                 </source>
                                 <p class="vjs-no-js">
                                     To view this video please enable JavaScript, and consider upgrading to a
@@ -398,8 +408,7 @@ mix-blend-mode: normal;
                     </span>
                     <div class="pt-2 pb-6 ">
                         <video id="what-we-do" class="vid video-js shadow-lg" controls preload="auto"
-                            poster="/videos/poster image for what we do.png" data-setup='{}'
-                            >
+                            poster="/videos/poster image for what we do.png" data-setup='{}'>
                             <source src="/videos/Rensource What we do.mp4" type="video/mp4">
                             </source>
                             <p class="vjs-no-js">
@@ -425,8 +434,10 @@ mix-blend-mode: normal;
                                 <span class="vertical-line"></span>
                             </span>
                             <h4 class="text-color-dark">Origination & Development</h4>
-                            <p class="text-color-dark">Working with a variety of stakeholders including project sponsors, regulators and
-                                Government. Rensource takes ideas from conception to bankable opportunity.
+                            <p class="text-color-dark">
+                                Our best-in-class team with both local
+                                and global access takes ideas from
+                                conception to bankable opportunity
                             </p>
                         </div>
                     </div>
@@ -440,13 +451,16 @@ mix-blend-mode: normal;
                             </span>
                             <h4 class="text-color-gray-dark">Engineering & Implementation</h4>
                             <p class="text-color-dark mb-0">
-                                In-house engineering team designs the most cost effective and appropriate solution
-                                for each project and works with various EPC firms and subcontractors for implementation.
+                                Our in-house engineering team designs
+                                the most effective solution for each use
+                                case, while our project engineers
+                                manage and oversee third-party
+                                contractors for project implementation.
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-24 col-lg-24">
+                <!-- <div class="col-xs-24 col-lg-24">
                     <div class="card mb-3">
                         <div class="card_body">
                             <span class="fancy-number">
@@ -481,7 +495,7 @@ mix-blend-mode: normal;
                             <span class="fancy-number">
                                 <span class="text-color-gray-dark t-24 w-2 digit">05</span>
                                 <!--                                <span class="vertical-line"></span>-->
-                            </span>
+                <!-- </span>
                             <h4 class="text-color-dark">Value Added Service</h4>
                             <p class="text-color-dark">
                                 Using a technology enabled platform to act as a distribution channel of third-party
@@ -489,32 +503,23 @@ mix-blend-mode: normal;
                             </p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="col-xs-24 col-sm-24 col-md-7 col-lg-7">
                 <div class="col-xs-24 col-lg-24">
-                    <h3 class="text-sm-center text-md-left blue-text  ml-sm-3">Merchant Services</h3>
+                    <h3 class="text-sm-center text-md-left blue-text  ml-sm-3">SPACES - Merchant Services</h3>
                 </div>
                 <div class="col-xs-24 col-lg-24">
                     <div class="card mb-3">
                         <div class="card-body p-0">
-                            <h4 class="text-color-dark">SPACES</h4>
                             <p class="text-color-dark">
-                                Using a technology enabled platform to act as a distribution channel of third-party
-                                services to the merchants we provide energy to.
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-24 col-lg-24">
-                    <div class="card mb-3">
-                        <div class="card-body p-0">
-                            <h4 class="text-color-dark">E-COMMERCE</h4>
-                            <p class="text-color-dark">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem diam vel et vel in nisl
-                                diam rutrum. Enim condimentum enim id etiam. Sollicitudin quis viverra enim purus. Orci,
-                                justo ultricies lobortis dolor mollis.
+                                Leveraging our existing service
+                                infrastructure, Rensource is building
+                                tools and services to support the
+                                transition from offline to online (O2O)
+                                for SMEs while addressing the hyper
+                                fragmented state of the West African
+                                distribution value chain.
                             </p>
                         </div>
                     </div>
