--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ mix-blend-mode: normal;
                 <div class="col-xs-24 col-sm-24 col-md-8 col-lg-8 mt-sm-1 mt-md-8">
                     <span class="mb-2">
                         <h1 class="text-left">What we do</h1>
-                        <div class="col-lg-24 col-sm-24 hide-xs">
+                        <div class="col-lg-24 col-sm-24 ">
                     </span>
                     <div class="pt-2 pb-6 ">
                         <video id="what-we-do" class="vid video-js shadow-lg" controls preload="auto"
@@ -449,8 +449,8 @@ mix-blend-mode: normal;
                                 <span class="text-color-gray-dark t-24 w-2 digit">02</span>
                                 <span class="vertical-line"></span>
                             </span>
-                            <h4 class="text-color-gray-dark">Engineering & Implementation</h4>
-                            <p class="text-color-dark mb-0">
+                            <h5 class="text-color-dark">Engineering & Implementation</h5>
+                            <p class="text-color-dark">
                                 Our in-house engineering team designs
                                 the most effective solution for each use
                                 case, while our project engineers
@@ -494,7 +494,7 @@ mix-blend-mode: normal;
                         <div class="card_body">
                             <span class="fancy-number">
                                 <span class="text-color-gray-dark t-24 w-2 digit">05</span>
-                                <!--                                <span class="vertical-line"></span>-->
+                                                                <span class="vertical-line"></span>-->
                 <!-- </span>
                             <h4 class="text-color-dark">Value Added Service</h4>
                             <p class="text-color-dark">
