Remove Links to Career
Commented out Career Page

--- a/media/index.html
+++ b/media/index.html
@@ -214,11 +214,11 @@
                                                 Our Team
                                             </a>
                                         </li>
-                                        <li class="">
+                                        <!-- <li class="">
                                             <a href="/careers/index.html" class="">
                                                 Careers
                                             </a>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                 </nav>
                                 <p class="show-xs mt-2">©2019 Rensource Limited. All Rights Reserved.</p>
