--- a/history/index.html
+++ b/history/index.html
@@ -267,11 +267,11 @@
                     Our Team
                   </a>
                 </li>
-                <li class="">
+                <!-- <li class="">
                   <a href="/careers/index.html" class="">
                     Careers
                   </a>
-                </li>
+                </li> -->
               </ul>
             </nav>
             <p class="show-xs mt-2">
