--- a/index.html
+++ b/index.html
@@ -860,11 +860,11 @@ mix-blend-mode: normal;
                                     Our Team
                                 </a>
                             </li>
-                            <li class="">
+                            <!-- <li class="">
                                 <a href="/careers/index.html" class="">
                                     Careers
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </nav>
                     <p class="show-xs mt-2">©2019 Rensource Limited. All Rights Reserved.</p>
