--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ mix-blend-mode: normal;
             </div>
             <div class="col-xs-24 col-sm-24 col-md-9 col-lg-9">
                 <div class="col-xs-24 col-lg-24">
-                    <h4 class="text-sm-center text-md-left blue-text  ml-sm-3">Decentralized Energy Services</h4>
+                    <h3 class="text-sm-center text-md-left blue-text  ml-sm-3">Decentralized Energy Services</h3>
                 </div>
                 <div class="col-xs-24 col-lg-24">
                     <div class="card mb-3 shadow-lg ren-border">
@@ -510,7 +510,7 @@ mix-blend-mode: normal;
                 <div class="col-xs-24 col-lg-24">
                     <div class="card mb-3 shadow-lg ren-border">
                         <div class="card_body">
-                            <span class="fancy-number">
+                            <span class="special-height fancy-number">
                                 <!-- <span class="text-color-gray-dark t-24 w-2 digit">01</span> -->
                                 <span class="vertical-line"></span>
                             </span>
