Phone Number Change

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ mix-blend-mode: normal;
                                         d="M0.491699 13.1801C0.491699 6.10608 6.27072 0.367188 13.3942 0.367188C20.5178 0.367188 26.2968 6.10608 26.2968 13.1801C26.2968 20.2542 20.5178 25.9931 13.3942 25.9931C6.27072 25.9931 0.491699 20.2542 0.491699 13.1801ZM2.18994 13.1797C2.18994 19.3168 7.21415 24.3062 13.3942 24.3062C19.5742 24.3062 24.5984 19.3168 24.5984 13.1797C24.5984 7.04261 19.5742 2.05328 13.3942 2.05328C7.21415 2.05328 2.18994 7.04261 2.18994 13.1797Z"
                                         fill="#626262" />
                                 </svg>
-                                <span style="font-size: 0.75rem; letter-spacing: 1px;">How it works</span>
+                                <span style="font-size: 0.75rem; letter-spacing: 1px;">How we do it</span>
                             </a>
                         </div>
                     </div>
@@ -843,7 +843,7 @@ mix-blend-mode: normal;
                         <span class="d-none">Rensource</span>
                     </h3>
                     <p>3B, Tiamiyu Savage Street <br>Victoria Island, Lagos <br>Nigeria</p>
-                    <p>1-631 1797</p>
+                    <p>09014150103</p>
                     <p><a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
                 </div>
                 <div class="col-lg-6 text-center text-lg-left order-1 order-xs-2 d-flex"
