--- a/manage_article/index.html
+++ b/manage_article/index.html
@@ -135,7 +135,7 @@
                     <span class="d-none">Rensource</span>
                 </h3>
                 <p>3B, Tiamiyu Savage Street <br>Victoria Island, Lagos <br>Nigeria</p>
-                <p>1-631 1797</p><p><a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
+                <p>09014150103</p><p><a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
             </div>
             <div class="col-lg-6 text-center text-lg-left order-1 order-xs-2 d-flex" style="flex-direction: column; align-items: center">
                 <h3 class="footer-h">Company</h3>
