--- a/single/index.html
+++ b/single/index.html
@@ -97,31 +97,19 @@
                     data-target="what-we-do-section"
                     >What we do</a
                   >
-                  <a class="dropdown-item" href="/mission/index.html"
+                  <!-- <a class="dropdown-item" href="/mission/index.html"
                     >Vision & Mission</a
-                  >
+                  > -->
                 </div>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item">
                 <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
+                  class="nav-link"
+                  href="/leadership/index.html"
                   id="company"
-                  role="button"
-                  data-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
                 >
-                  Company
+                  Leadership
                 </a>
-                <div class="dropdown-menu shadow-sm" aria-labelledby="company">
-                  <a class="dropdown-item" href="/history/index.html"
-                    >History</a
-                  >
-                  <a class="dropdown-item" href="/leadership/index.html"
-                    >Leadership</a
-                  >
-                </div>
               </li>
               <li class="nav-item dropdown">
                 <a
