--- a/history/index.html
+++ b/history/index.html
@@ -78,81 +78,37 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="aboutUs"
-                  role="button"
-                  data-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                >
-                  About Us
-                </a>
-                <div class="dropdown-menu shadow-sm" aria-labelledby="aboutUs">
-                  <a
-                    class="dropdown-item"
-                    href="/#what-we-do-section"
-                    data-target="what-we-do-section"
-                    >What we do</a
-                  >
-                  <a class="dropdown-item" href="/mission/index.html"
-                    >Vision & Mission</a
-                  >
-                </div>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="company"
-                  role="button"
-                  data-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                >
-                  Company
-                </a>
-                <div class="dropdown-menu shadow-sm" aria-labelledby="company">
-                  <a class="dropdown-item" href="/history/index.html"
-                    >History</a
-                  >
-                  <a class="dropdown-item" href="/leadership/index.html"
-                    >Leadership</a
-                  >
-                </div>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="aboutUs"
-                  role="button"
-                  data-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                >
-                  News
-                </a>
-                <div class="dropdown-menu shadow-sm" aria-labelledby="aboutUs">
-                  <a class="dropdown-item" href="/news/index.html">News</a>
-                  <a class="dropdown-item" href="/media/index.html">Media</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/contact/index.html">Contact</a>
-              </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="aboutUs" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        About Us
+                    </a>
+                    <div class="dropdown-menu shadow-sm" aria-labelledby="aboutUs">
+                        <a class="dropdown-item" href="/#what-we-do-section"
+                            data-target="what-we-do-section">What we do</a>
+                            <a class="dropdown-item" href="/leadership/index.html"
+                            >Leadership</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/#news-section" id="news" role="button"
+                    data-target="news-section">
+                        News
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contact/index.html">Contact Us</a>
+                </li>
             </ul>
-          </div>
+        </div>
         </div>
       </nav>
     </header>
-    <section  class="pt-8 pb-8 bg-rensource-yellow clip-me-9 height-85-vh ">
+    <section  class="pt-5 pb-3 bg-rensource-yellow clip-me-9 height-85-vh ">
       <div class="container">
         <div class="row">
           <div class="col-xs-24 col-lg-12 p-4">
-            <h2 class="mb-5">
+            <h2 class="mb-2">
               A brief story:
             </h2>
             <p>
