--- a/manage_rss/index.html
+++ b/manage_rss/index.html
@@ -69,7 +69,7 @@
                         </a>
                         <div class="dropdown-menu shadow-sm" aria-labelledby="aboutUs">
                             <a class="dropdown-item" href="/#what-we-do-section" data-target="what-we-do-section" >What we do</a>
-                            <a class="dropdown-item" href="/mission/index.html">Vision & Mission</a>
+                            <!-- <a class="dropdown-item" href="/mission/index.html">Vision & Mission</a> -->
                         </div>
                     </li>
                     <li class="nav-item dropdown">
